gccida/g0/push_array_bounds
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/c-typeck.c:5025:9: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
depth = spelling_0 - spelling_base; 
        ^~~~~~~~~~
        spelling
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/c-typeck.c:5033:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = &spelling_base[depth]; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/c-typeck.c:5035:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0->kind = 3; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/c-typeck.c:5036:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0->u.i = bounds; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/c-typeck.c:5037:3: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
++spelling_0; 
  ^~~~~~~~~~
  spelling
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/push_array_bounds/src/obj/c-typeck.o] Error 1
